# menu

./: README.md  manage.py  pyproject.toml
apps/menu/: admin.py  filters.py  models.py  serializers.py  views.py
apps/menu/fixtures/: dishes_data.json  ingredients_data.json
apps/menu/migrations/: 0001_initial.py  0002_alter_menu_options_remove_ingredient_description.py  0003_alter_dish_description_alter_dish_ingredients_and_more.py  0004_alter_menu_unique_together_remove_menu_date.py  0005_remove_dish_price.py  0006_alter_menu_unique_together_remove_dish_ingredients_and_more.py  0007_remove_dishingredient_ingredients_and_more.py  0008_rename_quantity_dishingredient_portion.py  0009_dish_ingredients_delete_dishingredient.py  0010_remove_dish_category.py  0011_alter_menu_unique_together.py  0012_menu_portion.py  0013_alter_dish_ingredients.py
apps/users/: admin.py  models.py  serializers.py  views.py
apps/users/migrations/: 0001_initial.py  0002_user_is_active.py
main/: settings.py  urls.py
